<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.TermTracker.NotesListActivity">
    <item
        android:id="@+id/action_add_sample_data"
        android:orderInCategory="100"
        android:title="@string/action_add_sample_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="101"
        android:title="@string/delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_go_home"
        android:orderInCategory="102"
        android:title="@string/go_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_test_alert"
        android:orderInCategory="103"
        android:title="@string/Fire_test_Alert"
        app:showAsAction="never" />
</menu>
