<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".AssessmentsEditorActivity"
                tools:showIn="@layout/activity_assessment_editor">

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">


        <GridLayout
            android:id="@+id/gridLayout2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="end">

            <ImageButton
                android:id="@+id/imageButton_Notification"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="0"
                android:contentDescription="@string/title_activity_assessment_list"
                android:onClick="scheduleAlert"
                android:scaleType="centerCrop"
                android:src="@drawable/notification_icon" />

            <ImageButton
                android:id="@+id/imageButton_Note"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="2"
                android:contentDescription="@string/title_activity_course_list"
                android:onClick="openNotesList"
                android:scaleType="centerCrop"
                android:src="@drawable/notes_icon" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:text="@string/title_Notification"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:text="@string/title_activity_notes_list"
                android:textAppearance="?android:attr/textAppearanceMedium" />


        </GridLayout>

        <EditText
            android:id="@+id/assessmentTitleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/assessmentDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/assessment_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/date" />


    </GridLayout>

</RelativeLayout>