<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TermsEditorActivity"
    tools:showIn="@layout/activity_term_editor">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:id="@+id/gridLayout2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="end">

            <ImageButton
                android:id="@+id/imageButton_Notification"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="0"
                android:contentDescription="@string/title_activity_assessment_list"
                android:onClick="scheduleAlert"
                android:scaleType="centerCrop"
                android:src="@drawable/notification_icon"
                android:visibility="visible"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/imageButton_Note"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="2"
                android:contentDescription="@string/title_activity_course_list"
                android:onClick="openCourseList"
                android:scaleType="centerCrop"
                android:src="@drawable/class_icon" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:text="@string/title_Notification"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="visible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:text="@string/title_activity_course_list"
                android:textAppearance="?android:attr/textAppearanceMedium" />


        </GridLayout>

        <EditText
            android:id="@+id/termTitleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/termStartDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/termEndDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/term_name" />

    </GridLayout>

</LinearLayout>