<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".CoursesEditorActivity"
                tools:showIn="@layout/activity_course_editor">

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">


        <EditText
            android:id="@+id/courseTitleEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/courseStartDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/courseEndDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/courseStatusEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="8dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_name" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/end_date" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="8dp"
            android:text="@string/course_status" />

        <GridLayout
            android:id="@+id/gridLayout2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="end">

            <ImageButton
                android:id="@+id/imageButton_Notification"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="0"
                android:contentDescription="@string/title_activity_assessment_list"
                android:onClick="scheduleAlert"
                android:scaleType="centerCrop"
                android:src="@drawable/notification_icon" />

            <ImageButton
                android:id="@+id/imageButton_Assessments"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="1"
                android:contentDescription="@string/title_activity_assessment_list"
                android:onClick="openAssessmentList"
                android:scaleType="centerCrop"
                android:src="@drawable/test_icon" />

            <ImageButton
                android:id="@+id/imageButton_Note"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="2"
                android:contentDescription="@string/title_activity_mentor_list"
                android:onClick="openMentorList"
                android:scaleType="centerCrop"
                android:src="@drawable/mentor_icon" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:text="@string/title_Notification"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:text="@string/title_activity_assessment_list"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_gravity="bottom"
                android:layout_margin="5dp"
                android:text="@string/title_activity_mentor_list"
                android:textAppearance="?android:attr/textAppearanceMedium" />


        </GridLayout>


    </GridLayout>

</RelativeLayout>