<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="565dp"
        android:layout_marginTop="24dp">

        <ImageButton
            android:id="@+id/imageButton_Term"
            android:layout_width="180dp"
            android:layout_height="168dp"
            android:layout_row="0"
            android:layout_column="0"
            android:contentDescription="@string/title_activity_terms_list"
            android:onClick="openTermList"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/term_icon" />

        <ImageButton
            android:id="@+id/imageButton_Course"
            android:layout_width="180dp"
            android:layout_height="168dp"
            android:layout_row="0"
            android:layout_column="1"
            android:contentDescription="@string/title_activity_course_list"
            android:onClick="openCourseList"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/class_icon" />

        <ImageButton
            android:id="@+id/imageButton_Mentor"
            android:layout_width="180dp"
            android:layout_height="168dp"
            android:layout_row="1"
            android:layout_column="1"
            android:contentDescription="@string/title_activity_mentor_list"
            android:onClick="openMentorList"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/mentor_icon" />

        <ImageButton
            android:id="@+id/imageButton_Assessments"
            android:layout_width="180dp"
            android:layout_height="168dp"
            android:layout_row="1"
            android:layout_column="0"
            android:contentDescription="@string/title_activity_assessment_list"
            android:onClick="openAssessmentList"
            android:padding="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/test_icon" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:text="@string/title_activity_terms_list"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:text="@string/title_activity_assessment_list"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:text="@string/title_activity_mentor_list"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:text="@string/title_activity_course_list"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </GridLayout>
</LinearLayout>